# oeo_data

./: .gitignore  .pre-commit-config.yaml  README.md  env.example  manifest.json  pyproject.toml
.github/scripts/: cleanup_staging_bucket.py  publish_script.py
.github/workflows/: ci.yml  cleanup.yml  publish.yml
diffs/test_database.sqlite/: diff-v1-to-v2.diff  diff-v2-to-v3.diff  diff-v3-to-v4.diff  diff-v4-to-v5.diff  diff-v5-to-v6.diff  diff-v6-to-v7.diff  diff-v7-to-v8.diff  diff-v8-to-v9.diff
diffs/testing_git_worktree.sqlite/: diff-v1-to-v2.diff
docs/source/: api_reference.rst  conf.py  datasets.md  index.rst  setup.md  usage.md  workflow.md
docs/source/api/: index.rst
docs/source/api/datamanager/: index.rst
docs/source/api/datamanager/config/: index.rst
docs/source/api/datamanager/core/: index.rst
docs/source/api/datamanager/manifest/: index.rst
docs/source/datamanager/: datamanager.config.rst  datamanager.core.rst  datamanager.manifest.rst  datamanager.rst
src/datamanager/: __init__.py  __main__.py  config.py  core.py  manifest.py
src/datamanager.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: conftest.py  test_core.py  test_main.py  test_manifest.py
