[project]
name = "datamanager"
version = "0.1.0"
description = "A command-line tool for managing versioned data in Cloudflare R2 buckets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.46",
    "python-dotenv>=1.1.1",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
]

[project.scripts]
datamanager = "datamanager.__main__:app"
