[project]
name = "datamanager"
version = "0.1.0"
description = "A command-line tool for managing versioned data in Cloudflare R2 buckets"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.38.46",
    "python-dotenv>=1.1.1",
    "questionary>=2.1.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]

[dependency-groups]
dev = [
    "boto3-stubs>=1.38.46",
    "mypy>=1.16.1",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "ruff>=0.12.1",
    "types-boto3[essential]>=1.39.0",
    "types-python-dateutil>=2.9.0.20250516",
]

[project.scripts]
datamanager = "datamanager.__main__:app"

[project.optional-dependencies]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autoapi>=3.6.0",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-last-updated-by-git>=0.3.8",
    "sphinxcontrib-mermaid>=1.0.0",
]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
warn_unused_configs = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
exclude = [
    "tests/*",
]


[tool.pytest.ini_options]
addopts = "--cov=datamanager --cov-report term"

